# ds-projects

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  conftest.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
01-customer-churn-mlops/: Dockerfile  README.md  docker-compose.yml  dvc.yaml  requirements.txt  streamlit_app.py  train.py
01-customer-churn-mlops/.streamlit/: config.toml
01-customer-churn-mlops/configs/: training.yaml
01-customer-churn-mlops/notebooks/: eda.py
01-customer-churn-mlops/tests/: test_customer_churn_mlops.py  test_uplift.py
02-rag-enterprise/: Dockerfile  README.md  docker-compose.yml
02-rag-enterprise/configs/: rag.yaml
02-rag-enterprise/notebooks/: eda.py
02-rag-enterprise/tests/: test_conversation_memory.py  test_hyde_retrieval.py  test_multi_query.py  test_rag_enterprise.py  test_retrieval_eval.py
03-ner-service/: Dockerfile  README.md  docker-compose.yml
03-ner-service/configs/: ner.yaml
03-ner-service/notebooks/: eda.py
03-ner-service/tests/: test_ner_service.py
04-graph-fraud-detection/: Dockerfile  README.md
04-graph-fraud-detection/artifacts/: gcn_model.pt  results.json
04-graph-fraud-detection/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
04-graph-fraud-detection/configs/: fraud.yaml
04-graph-fraud-detection/notebooks/: eda.py
04-graph-fraud-detection/tests/: conftest.py  test_graph_fraud_detection.py
05-realtime-anomaly/: Dockerfile  README.md  docker-compose.yml  prometheus.yml  requirements.txt  streamlit_app.py
05-realtime-anomaly/.streamlit/: config.toml
05-realtime-anomaly/artifacts/: lstm_ae_model.pt  results.json
05-realtime-anomaly/configs/: anomaly.yaml
05-realtime-anomaly/notebooks/: eda.py
05-realtime-anomaly/tests/: conftest.py  test_realtime_anomaly.py
06-cv-document-scanner/: Dockerfile  README.md  docker-compose.yml  train.py
06-cv-document-scanner/artifacts/: label_encoder.pkl  model.pkl
06-cv-document-scanner/configs/: training.yaml
06-cv-document-scanner/notebooks/: eda.py
06-cv-document-scanner/tests/: conftest.py  test_cv_document_scanner.py
07-realestate-pricing/: Dockerfile  README.md  conftest.py  docker-compose.yml  mlflow.db  requirements.txt  streamlit_app.py  train.py
07-realestate-pricing/.streamlit/: config.toml
07-realestate-pricing/artifacts/: model.pkl  results.pkl
07-realestate-pricing/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
07-realestate-pricing/configs/: training.yaml
07-realestate-pricing/notebooks/: eda.py
07-realestate-pricing/tests/: conftest.py  test_realestate_pricing.py
08-llm-code-review/: Dockerfile  README.md  docker-compose.yml
08-llm-code-review/configs/: review.yaml
08-llm-code-review/notebooks/: eda.py
08-llm-code-review/tests/: conftest.py  test_llm_code_review.py
09-recsys-feature-store/: Dockerfile  README.md  docker-compose.yml  train.py
09-recsys-feature-store/artifacts/: collaborative.pkl  content_based.pkl  metrics.pkl
09-recsys-feature-store/configs/: training.yaml
09-recsys-feature-store/feature_repo/: feature_store.yaml  features.py
09-recsys-feature-store/notebooks/: eda.py
09-recsys-feature-store/tests/: conftest.py  test_recsys_feature_store.py
10-data-quality-platform/: .gitignore  Dockerfile  README.md  docker-compose.yml
10-data-quality-platform/configs/: expectations.yaml
10-data-quality-platform/data/: current.csv  reference.csv
10-data-quality-platform/notebooks/: eda.py
10-data-quality-platform/scripts/: seed_demo_data.py
10-data-quality-platform/src/: __init__.py
10-data-quality-platform/tests/: conftest.py  test_correlation.py  test_data_quality_platform.py  test_deduplication.py  test_k8s_manifests.py  test_label_quality.py  test_lineage.py  test_prediction_monitor.py  test_security.py  test_sla.py  test_spc.py  test_stat_tests.py  (+1 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EVOLUTION.md  ROADMAP.md  architecture.md  contributing.md  evolution.md  index.md  mlops-maturity.md
k8s/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  secrets-template.yaml
scripts/: docker_train.py  pre_push_tests.sh  run_tests.sh  train_all.Dockerfile  validate_k8s.py
(+309 files in other folders)
