[project]
name = "ds-projects"
version = "0.1.0"
description = "Production-grade ML projects portfolio"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Vladimir Lovtsov", email = "vovlov@users.noreply.github.com" },
]

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
churn = [
    "polars>=1.0",
    "catboost>=1.2",
    "lightgbm>=4.0",
    "scikit-learn>=1.5",
    "optuna>=4.0",
    "mlflow>=2.18",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "streamlit>=1.40",
    "plotly>=5.24",
    "great-expectations>=1.3",
    "dvc>=3.56",
]
rag = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "anthropic>=0.40",
    "langchain-anthropic>=0.3",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "gradio>=5.0",
]
ner = [
    "torch>=2.4",
    "transformers>=4.47",
    "datasets>=3.2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "streamlit>=1.40",
    "seqeval>=1.2",
]
fraud = [
    "networkx>=3.4",
    "catboost>=1.2",
    "scikit-learn>=1.5",
    "pyvis>=0.3",
    "plotly>=5.24",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "streamlit>=1.40",
]
anomaly = [
    "torch>=2.4",
    "kafka-python>=2.0",
    "redis>=5.2",
    "prometheus-client>=0.21",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["N806"]  # Allow uppercase X, y (ML convention)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[tool.uv]
override-dependencies = [
    "onnxruntime>=1.19,<1.24; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch<=2.5.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
